old_tests/parser/invalid/009-while-without-condition.man
def main()
    while
        foo()
    end
end
